Try-catch with resources added.